--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>OpenMind</title>
@@ -17,7 +12,7 @@
 
 		<!-- Sidebar -->
 			<section id="sidebar">
-				<div class="inner">
+				<div class="inner" >
 					<nav>
 						<img src = "images/logo.png" alt = "logo.png" width="250" height="250" style="position: absolute; top: 0; left: 0; width: 100%;">
 						<ul>
@@ -34,10 +29,10 @@
 			<div id="wrapper">
 
 				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
+					<section id="intro" class="wrapper style1 fullscreen fade-up" >
 						<div class="inner">
 							<h1>OpenMind</h1>
-							<p>AI based project working on API by  <a href="https://platform.openai.com/">OpenAI</a><br /></p>
+							<p>AI based project working on API by  <a href="https://platform.openai.com/"><u>OpenAI</u></a><br /></p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Try it Now</a></li>
 							</ul>
@@ -48,10 +43,10 @@
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
 							<a href="#" class="image"><img src="images/77759.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
+							<div class="content">	
 								<div class="inner">
 									<h2>Using AI for education</h2>
-									<p>AI has the potential to revolutionize education by providing personalized learning experiences tailored to individual students.</p>
+									<p>AI has the potential to <u>revolutionize education</u> by providing personalized learning experiences tailored to individual students.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -63,7 +58,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Design your Syllabus</h2>
-									<p>No deadlines! learn on the go! No tension of assignments! Thats exactly what every student wants</p>
+									<p><u>No deadlines</u>! learn on the go! No tension of assignments! Thats exactly what every student wants.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Design it!</a></li>
 									</ul>
@@ -75,7 +70,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Test your knowledge, not your serving skills</h2>
-									<p>Get tested by the AI, based on the course you are doing</p>
+									<p><u>Get tested</u> by the AI, based on the course you are doing.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Test it out!</a></li>
 									</ul>
@@ -87,38 +82,37 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Why to use this?</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Why to use <u>OpenMind</u>?</h2>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Learn for free</h3>
+									<p>Learn everything for free, from sources like youtube and other certified documents.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Limitless</h3>
+									<p>Your brain runs in random direction? you don't need to steer it! Here you can learn anything.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Skill Development</h3>
+									<p>Learn your skills to their depths, all you need is a focus and everything is yours.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Time is everything</h3>
+									<p>Why waste time in searching for just the correct Youtube videos to learn?</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Personalized Syllabus</h3>
+									<p>Tired today? Don't want to dig in much? No worries, you can just learn what you please and leave the rest, no compulsions.</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>User-friendly Interface</h3>
+									<p>Just some clicks and poof! you are touching all the knowledge this world has to offer!</p>
 								</section>
 							</div>
 							<ul class="actions">
@@ -130,9 +124,8 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
+							<h2>Facing any issues?</h2>
+							<p>We are available to help you in any issues you are facing.</p>
 								<section>
 									<form method="post" action="#">
 										<div class="fields">
@@ -145,12 +138,12 @@
 												<input type="text" name="email" id="email" />
 											</div>
 											<div class="field">
-												<label for="message">Message</label>
+												<label for="message">Report a bug</label>
 												<textarea name="message" id="message" rows="5"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="" class="button submit">Report bug</a></li>
 										</ul>
 									</form>
 								</section>
@@ -158,17 +151,17 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<span>Dr.DYPIT<br />
+											Sant Tukaram nagar, Pimpri<br />
+											Pune-18</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">OpenMind@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>7822966209</span>
 										</li>
 										<li>
 											<h3>Social</h3>
@@ -192,7 +185,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; OpenMind. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
