--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <title>OpenMind</title>
-</head>
-<body>
-
-</body>
-</html>
+{% block title %}Test{% endblock  %}
+{% block content%}
+<form action="#" method="post">
+  <label for="type">enter type of source you want:</label>
+  <input type="text" id="type" name="type">
+  <label for="mood">Whats your mood right now?</label>
+  <input type = "text" id="mood" name="mood">
+  <input type="submit" value="submit">
+</form>  
+{%endblock%}
